# dbms

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
data/: empleados.csv
src/: .gitignore  main.rs  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt
src-python/: app.py  avl_test.py  main.py  main_test.py  main_test_avl.py  requirements.txt
src-python/catalog/: catalog_manager.py  column.py  database.py  function.py  index.py  schema.py  table.py
src-python/data/: empleados.csv  inventory.csv
src-python/engine/: executor.py  planner.py
src-python/query/: parser_sql.py
src-python/test/: test_delete_operator.py  test_file_manager.py  test_parser_sql.py  test_path_builder.py  test_rtree_minimal.py  test_select_rtree.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/catalog/: catalog_manager.rs  column.rs  function.rs
src-tauri/engine/: mod.rs  planner.rs
src-tauri/src/: main.rs
src-tauri/src/catalog/: catalog_manager.rs  column.rs  constraint.rs  database.rs  table.rs
src-tauri/src/engine/: executor.rs  mod.rs  planner.rs
src-tauri/src/engine/operators/: insert.rs  mod.rs
src-tauri/src/storage/disk/: file_manager.rs  mod.rs  path.rs
src-tauri/src/storage/indexing/: heap.rs  mod.rs
src-tauri/src/types/: data_enum.rs  data_types.rs
src/app/: layout.tsx  page.tsx
src/catalog/: catalog_manager.rs  column.rs  constraint.rs  database.rs  index.rs  mod.rs  schema.rs  table.rs
src/components/: Sidebar.tsx  code-editor.tsx  db-switcher.tsx  nav-contain.tsx  tab-file.tsx
src/engine/: executor.rs  (+1 more)
(+33 files in other folders)
