[package]
name = "src-tauri"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = "1.16.0"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
thiserror = { version = "2.0.12"}
datafusion = { version = "47.0.0" }
byteorder = "1.5.0"
once_cell = "1.21.3"